# Computer-Linear-Algebra-System

./: .gitignore  CMakeLists.txt  algebra.cpp  arithmetic.cpp  ast.cpp  ast.hpp  interpreter.cpp  linear-algebra-bnf.txt  main  main.cpp  parser.cpp  pom.xml  repl  repl.cpp
src/AbstractSyntaxTree/: Assignment.java  BinaryOperation.java  BinaryOperator.java  BinaryOperators.java  Boolean.java  ColumnVector.java  DoubleScalar.java  Evaluate.java  Expression.java  FractionScalar.java  Function.java  FunctionExpression.java  FunctionName.java  Matrix.java  RowReductionResult.java  RowVector.java  Scalar.java  Statement.java  StatementBlock.java  UnaryOperation.java  UnaryOperator.java  UnaryOperators.java  Value.java  ValueExpression.java  Variable.java  Vector.java  VectorList.java  VectorSet.java
src/Core/: Algorithms.java  ComputerAlgebraSystem.java  Repl.java
src/Interpreter/: LinearInterpreter.java
src/Parser/: LinearParser.java
src/Utilities/: RowOperation.java  RowReductionResult.java  RowReplace.java  RowScale.java  RowSwap.java
src/main/java/AbstractSyntaxTree/: ExpressionBlock.java  FunctionExpression.java  Matrix.java  Scalar.java  UnaryOperation.java
src/main/java/App/: ComputerAlgebraSystem.java  Repl.java
